force-app/main/default/objects/BlackList__c/BlackList__c.object-meta.xml
<CustomObject>
    <label>Black List</label>
    <nameField>
        <displayFormat>BL-{0000000}</displayFormat>
        <label>Black List No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Black List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>