force-app/main/default/objects/BlackList__c/fields/Is_Activited__c.field-meta.xml
<CustomField>
    <fullName>Is_Activited__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Activited</label>
    <type>Checkbox</type>
</CustomField>