force-app/main/default/objects/BlackList__c/fields/Reason_for__c.field-meta.xml
<CustomField>
    <fullName>Reason_for__c</fullName>
    <label>Reason for</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>